FIX: top-left icons color broken in latest Spotify update

--- a/DribbblishDynamic/user.css
+++ b/DribbblishDynamic/user.css
@@ -1455,7 +1455,8 @@ button#player-button-repeat,
 
 .RootlistItemFolder__name:before,
 .RootlistItemFolder__arrow:before,
-.SidebarListItem__label:before {
+.SidebarListItem__label:before,
+.SidebarListItemLink:before {
     color: var(--modspotify_secondary_fg);
 }
 
